@@ -1,5 +1,10 @@
 Conf-AmonNG
 
+23/04/09
+- ajout conf SARG
+- suppression des /etc/cron.*/sarg
+- les fichiers de log dansguardian sont désormais permutés par semaine (au lieu de par jour)
+
 06/04/09 (emmanuel)
 - ré-activation des plugins ntlm/basic pour DansGuardian
 - conditionnement du démarrage de NGINX sur sa variable creole : "activer_revprox"
